<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.MainActivity">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/mb_switch_language"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/switch_language"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <LinearLayout
        android:id="@+id/ll_refresh_rate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mb_switch_language">

        <TextView
            android:id="@+id/tv_refresh_rate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/refresh_rate"
            android:gravity="right"
            android:layout_weight="1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/mb_switch_language"/>

        <RadioGroup
            android:id="@+id/rg_refresh_rate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintLeft_toRightOf="@id/tv_refresh_rate"
            app:layout_constraintTop_toBottomOf="@id/mb_switch_language">

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/mrb_1_minute"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/refresh_rate_1_minute"/>

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/mrb_5_minutes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/refresh_rate_5_minutes"/>

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/mrb_15_minutes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/refresh_rate_15_minutes"/>

        </RadioGroup>

        <TextView
            android:id="@+id/tv_refresh_rate_unit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/minute"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/mb_switch_language"/>

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/mb_sort"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/switch_sort"
        app:layout_constraintTop_toBottomOf="@id/ll_refresh_rate"
        app:layout_constraintRight_toRightOf="parent"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_content"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mb_sort"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:id="@+id/tv_no_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:textSize="22sp"
        android:text="@string/no_data"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mb_sort"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <FrameLayout
        android:id="@+id/layout_progressing"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?scrimBackground"
        android:visibility="gone">

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:indeterminate="true" />

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>